--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  shared_preferences: ^2.0.18
+  bottom_navigation_bar: ^1.0.1
+  fluttertoast: ^8.2.1
 
 dev_dependencies:
   flutter_test:
